--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "bin/www.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "cross-env NODE_ENV=dev nodemon bin/www.js"
+    "dev": "cross-env NODE_ENV=dev nodemon ./bin/www.js",
+    "prd": "cross-env NODE_ENV=production nodemon ./bin/www.js"
   },
   "keywords": [],
   "author": "",
@@ -14,5 +15,9 @@
     "cross-env": "^5.2.0",
     "eslint": "^5.15.3",
     "nodemon": "^1.18.10"
+  },
+  "dependencies": {
+    "dotenv": "^7.0.0",
+    "mysql": "^2.16.0"
   }
 }
