--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "dotenv": "^7.0.0",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "redis": "^2.8.0"
   }
 }
